[gd_scene load_steps=3 format=3 uid="uid://cbqrvb1pn3bv0"]

[ext_resource type="Theme" uid="uid://bxakjwkc4gbrj" path="res://themes/main_menu_theme.tres" id="1_gx6bi"]
[ext_resource type="Script" uid="uid://mxfkwh85l84p" path="res://scripts/pause_menu.gd" id="2_e3mnj"]

[node name="PauseMenu" type="PanelContainer"]
process_mode = 3
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -203.0
offset_top = -229.0
offset_right = 225.0
offset_bottom = 207.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_gx6bi")
script = ExtResource("2_e3mnj")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Paused"

[node name="MainMenuButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="OptionsButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options
"

[node name="ContinueButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Continue"

[connection signal="pressed" from="MarginContainer/VBoxContainer/MainMenuButton" to="." method="_navigate_to_main_menu"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ContinueButton" to="." method="_toggle_visibility"]
